--- a/app/src/main/res/layout/fragment_track.xml
+++ b/app/src/main/res/layout/fragment_track.xml
@@ -9,6 +9,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Track_Fragmenation" />
+        android:text="TRACK FRAGMENT" />
 
 </FrameLayout>
